<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thinkful.notes.SettingsActivity">

    <TextView android:text="@string/settings_backgroundColor_label"
        android:id="@+id/settings_backgroundColor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_foregroundColor_label"
        android:id="@+id/settings_foregroundColor_label"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_save_label"
        android:id="@+id/settings_save_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/radioGroup_backgroundColor"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/settings_backgroundColor_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/settings_foregroundColor_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_radioButton_backgroundColor1"
            android:id="@+id/settings_radioButton_backgroundColor1" />

        <RadioButton
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_radioButton_backgroundColor2"
            android:id="@+id/settings_radioButton_backgroundColor2" />

        <RadioButton
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_radioButton_backgroundColor3"
            android:id="@+id/settings_radioButton_backgroundColor3" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_foregroundColor"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/settings_foregroundColor_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/settings_save_button">

        <RadioButton
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_radioButton_foregroundColor1"
            android:id="@+id/settings_radioButton_foregroundColor1" />

        <RadioButton
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_radioButton_foregroundColor2"
            android:id="@+id/settings_radioButton_foregroundColor2" />

        <RadioButton
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_radioButton_foregroundColor3"
            android:id="@+id/settings_radioButton_foregroundColor3" />

        <RadioButton
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_radioButton_foregroundColor4"
            android:id="@+id/settings_radioButton_foregroundColor4" />
    </RadioGroup>

</RelativeLayout>
